...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/tv_list_item_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
...
        android:layout_margin="4dp"
        android:gravity="center"
        tools:text="Servings: 8"
        />

    <Button
        android:id="@+id/btn_list_item_recipe_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:text="Show Recipe"
        android:textColor="@color/color_material_green"
...
