...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded"
    >

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appbar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:theme="@style/ThemeOverlay.AppCompat.Light"
      >
    <com.google.android.material.appbar.CollapsingToolbarLayout
...
          app:layout_collapseMode="pin"
          />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:tabTextColor="@android:color/black"
        />
  </com.google.android.material.appbar.AppBarLayout>

...
