...
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      >
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_step_details_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:src="@drawable/ic_chevron_left_black"
        android:tint="@android:color/white"
        android:focusable="true"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_step_details_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
...
