<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_steps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDivider"
    tools:context=".ui.details.IngredientsFragment"
    tools:listitem="@layout/list_item_steps_layout"
    />